--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <!-- Posts section -->
 <div class="CV" id="CV">
 	<div class="container">
-	<h1 class="text-center">CV</h1>
+	<h1 class="text-center">Curriculum Vitae</h1>
 		<div class="row">
 			<div class="col-md-12 col-lg-12 col-sm-12">
 				<h4><b>Education</b></h4>
@@ -152,7 +152,7 @@
 				<p2>May 2021</p2>
 
 				<h5>Pontificia Universidad Católica del Perú</h5>
-				<p>Master of Art - Archaeologay and Andean Studies</p>
+				<p>Master of Art - Archaeology and Andean Studies</p>
 				<p2>July 2021</p2>
 
 				<h5>University of Wisconsin - Milwaukee</h5>
@@ -170,7 +170,7 @@
 
 				<h5>Co Director, Investigacion Arqueologica Piura Alto</h5>
 				<p>Piura, Peru</p>
-				<p2>2015 - Present</p2>
+				<p2>2019 - Present</p2>
 
 				<h5>Internship Co-Coordinator</h5>
 				<p>Moche Inc.</p>
@@ -222,7 +222,7 @@
 				<div class="column">
 				<li>Spanish - Advanced (Written & Spoken)</li>
 				<li>American Sign Language - Intermediate</li>
-				<li>Quechua (Ayacuchano) - Elementary (Spoken) (</li>
+				<li>Quechua (Ayacuchano) - Elementary (Spoken) </li>
 				</div>
 				<div class="column">
 				<li>Arabic - Elementary (Written & Spoken)</li>
@@ -231,12 +231,41 @@
 				</div>
 				</div>
 
-
 				<h4><b>Presentations and Publications</b></h4>
+				<p>	Hoover, Corey and Kylie Quave. 2019 “Archaeobotanical Remains
+	 				from Yunkaray, Cusco, Peru”. <br>Paper Presented at the 84th Annual
+					Meeting of The Society for American Archaeology, Albuquerque,
+					New Mexico
+				</p>
+				<p>	Hoover, Corey, Patrick Mullins, and Brian Billman. 2017 “GIS and Drones
+					in The Middle Moche Valley: An Analysis of Huaca Menocucho”.<br>
+					Poster Presented at the 82nd Annual Meeting of The Society for American
+					Archaeology, Vancouver, British Columbia.
+				</p>
+				<p> McTavish, Rachel and Corey Hoover. 2017 “A Holistic Investigation of
+					Economization at a Late Prehistoric Village in Northern Illinois”.<br>
+					Paper Presented at the 82nd Annual Meeting of The Society for American
+					Archaeology, Vancouver, British Columbia.
+				</p>
+				<p>	Hoover, Corey and Thomas Hardy. 2016. "Food Consumption and Animal
+					Exploitation at Minaspata, Cusco, Peru".<br>
+					Poster Presented at the 81st Annual Meeting of The Society for American
+					Archaeology, Orlando, Florida.
+				</p>
 
 
 
 				<h4><b>Awards, Grants, and Fellowships</b></h4>
+				<p>Huell D. Perkins Doctoral Fellowship - $25000 per year</p>
+				<p>University of Maryland Study Abroad Scholarship</p>
+				<p>George Washington University Research Grant - $1,000</p>
+				<p>Black Trowel Microgrant - $300</p>
+				<p>Army Combat Action Badge</p>
+				<p>Army Commendation Medal (2x)</p>
+				<p>Army Achievement Medal (2x)</p>
+				<p>Army Drill Sergeant Badge</p>
+				<p>Commandant's List - Joint Weapons Intelligence Course</p>
+				<p>Commandant's List - United States Army Drill Sergeant School</p>
 
 
 
