--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   		My name is Corey.
   		<p>
   		I am an Archaeologist and GIS Specialist studying complex societies and networks.
-  		I approach this with a heavy emphasis on GIS and Remote Sensing. Scroll down to
-		learn more about me and my work</p>
+  		I approach this with a heavy emphasis on GIS and Environmental Archaeology. Scroll down to
+		learn more about me and my work.</p>
   	</h1>
   </div>
    </div>
@@ -121,7 +121,7 @@
 
 			  <div class="col-lg-8 col-md-8 col-sm-12 desc">
 
-				  <h3>Research</h3>
+				  <h3>My Research Scope</h3>
 				  <p>My research focuses on interregional trade networks in the Central and Northern Andes.
 					  I have previously worked on archaeological  projects in Trujillo, Cañete, Ancash, Castellammare di
 					  Stabia (Italy), and the Midwestern United States. My interests are focused on
@@ -168,7 +168,7 @@
 				<p>Various, Peru</p>
 				<p2>2015 - Present</p2>
 
-				<h5>Co Director, Investigacion Arqueologica Piura Alto</h5>
+				<h5>Co Director, Investigación Arqueológica Piura Alto</h5>
 				<p>Piura, Peru</p>
 				<p2>2019 - Present</p2>
 
@@ -263,6 +263,8 @@
 				<p>Army Combat Action Badge</p>
 				<p>Army Commendation Medal (2x)</p>
 				<p>Army Achievement Medal (2x)</p>
+				<p>German Schützenschnur (Marksmanship) Badge, Gold</p>
+				<p>German Das Abzeichen für Leistungen im Truppendienst (Military Proficiency) Badge, Gold</p>
 				<p>Army Drill Sergeant Badge</p>
 				<p>Commandant's List - Joint Weapons Intelligence Course</p>
 				<p>Commandant's List - United States Army Drill Sergeant School</p>
