--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 				<a href="https://github.com/hoovco/Toponyms_Map">
 				<img src="images/portfolio/portfolioToponyms.JPG" class="img-fluid" style="object-fit: cover;">
 			</div>
-
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<a href="https://api.mapbox.com/styles/v1/hoovco/cjzipmgao48ca1doxvcapp1br.html?fresh=true&title=view&access_token=pk.eyJ1IjoiaG9vdmNvIiwiYSI6ImNrODJia3p4NzB6cDIzZXBha3Fzb3RiOW0ifQ.dzT0EQXtMyS-ME9Ut3rIzQ">
 				<img src="images/portfolio/WWIITileset.jpg" class="img-fluid" style="object-fit: cover;">
@@ -109,10 +108,9 @@
 				<img src="images/portfolio/pythonApp.JPG" class="img-fluid" style="object-fit: cover;">
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
+				<a href="https://github.com/hoovco/IDW_OLS_Nitrate_Levels">
 				<img src="images/portfolio/Longform_Hoover.png" class="img-fluid" style="object-fit: cover;">
-				<div class="overlay2">
-					<div class="text">Longform Infographic</div>
-				</div>
+			</div>
 			</div>
 			</div>
 		</div>
